--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ dotenv = "0.15.0"
 
 futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
 hyper = "0.13"
-tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
+tokio = { version = "1", features = ["full"] }
 serde = {version = "1.0", features = ["derive"] }
 route-recognizer = "0.2"
 bytes = "0.5"
 async-trait = "0.1"
+diesel = { version = "2.2.0", features = ["postgres"] }
+queues = "1.0.2"
+log = "0.4.22"
